# Music-Player

./: README.md  index.html  main.py  manifest.json  pyproject.toml  script.js  style.css
css/: style.css
js/: Controls.js  script.js
static/css/: style.css
static/js/: script.js
templates/: index.html
